<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- info -->
    <string name="info_synopsis">Synopsis</string>
    <string name="info_avg_rating">Avg rating</string>
    <string name="info_details">Details</string>
    <string name="info_original_title">Original Title</string>
    <string name="info_release_date">Release Date</string>
    <string name="info_budget">Budget</string>
    <string name="info_revenue">Revenue</string>
    <string name="info_status">Status</string>
    <string name="info_casts">Casts</string>
    <string name="info_reviews">Reviews</string>
    <string name="info_movie_recommendations">Recommendations</string>
    <string name="info_movie_similar">Similar</string>

    <!-- review -->
    <string name="review_empty">No reviews found.\n\nSorry, we couldn\'t find any reviews,
        please check back later.</string>
</resources>