<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail.info.InfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/CardGreyBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_overview_label"
                    style="@style/HeaderLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_synopsis" />

                <TextView
                    android:id="@+id/tv_overview"
                    style="@style/BasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something Synopsis" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardGreyBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_vote_average_label"
                    style="@style/HeaderLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_avg_rating"
                    app:layout_constraintBottom_toTopOf="@+id/iv_star"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_star"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_vote_average"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/tv_vote_average"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline"
                    app:layout_constraintLeft_toRightOf="@+id/iv_star"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label"
                    tools:text="6.8" />

                <TextView
                    android:id="@+id/tv_vote_ten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="/10"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_vote_average"
                    app:layout_constraintEnd_toStartOf="@id/tv_vote_count"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="@+id/tv_vote_average" />

                <ImageView
                    android:id="@+id/iv_person"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:src="@drawable/person"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_vote_count"
                    app:layout_constraintTop_toBottomOf="@+id/tv_vote_average_label" />

                <TextView
                    android:id="@+id/tv_vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_person"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/iv_person"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="9,314" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5013193" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <androidx.cardview.widget.CardView
            style="@style/CardGreyBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_detail_label"
                    style="@style/HeaderLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_details"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_original_title_label"
                    style="@style/LighterBasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_original_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_label" />

                <TextView
                    android:id="@+id/tv_original_title"
                    style="@style/BasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_original_title_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="Deadpool 2" />

                <TextView
                    android:id="@+id/tv_release_date_label"
                    style="@style/LighterBasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_release_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_original_title" />

                <TextView
                    android:id="@+id/tv_release_date"
                    style="@style/BasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_release_date_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="2018-06-18" />

                <TextView
                    android:id="@+id/tv_budget_label"
                    style="@style/LighterBasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_budget"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_status_label" />

                <TextView
                    android:id="@+id/tv_budget"
                    style="@style/BasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_budget_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="$10,000,000" />

                <TextView
                    android:id="@+id/tv_revenue_label"
                    style="@style/LighterBasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_revenue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_budget_label" />

                <TextView
                    android:id="@+id/tv_revenue"
                    style="@style/BasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_revenue_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="$500,000,000" />

                <TextView
                    android:id="@+id/tv_status_label"
                    style="@style/LighterBasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_status"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_release_date_label" />

                <TextView
                    android:id="@+id/tv_status"
                    style="@style/BasicLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_status_label"
                    app:layout_constraintStart_toEndOf="@+id/tv_release_date_label"
                    tools:text="Released" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_casts"
            android:layout_marginBottom="4dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_casts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_movie_recommendations"
            android:layout_marginBottom="4dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_movie_similar"
            android:layout_marginBottom="4dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_similar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>